--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
 <p>A few of the projects I work on</p>
 
 <h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Freeside</h3>
+
+<p>And extremely powerful Open-Source Billing and Provisioning System.</p>
+
+<h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Respite</h3>
+
+<p>Perl libraries for extremely fast JSON API's</p>
+
+<h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Business::OnlinePayment</h3>
+
+<p>Perl libraries for interacting with Payment Processors</p>
+
+<h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Non-Code Stuff</h3>
 
 <p>#TODO: Preppers, Fun, Scouts</p>
