First changes for freeside information

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Freeside</h3>
 
-<p>And extremely powerful Open-Source Billing and Provisioning System.</p>
+<p>And extremely powerful Open-Source Billing and Provisioning System. <a href="https://github.com/Jayceh/Freeside" class="code">My Freeside Edits</a></p>
+<p>Changes here beyond general bugfixes should be various performance and scaling changes I've helped make.  We've gone through a few tests of a Memcache layer to limit the number of DB hits, which is crazy high in the default FS for now.  Also of note is the begging of cleaning up some object cache to limit the huge overhead in non-reused objects. ... More information soon...</p>
+<p>My contract time is currently filled, if you need specific help with Freeside systems, please contact <a href="http://freeside.biz/">Freeside, Inc.</a></p>
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Respite</h3>
