Add first BOP information, and a litle link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Business::OnlinePayment</h3>
 
-<p>Perl libraries for interacting with Payment Processors</p>
+<p>Perl libraries for interacting with Payment Processors. Business::OnlinePayment (or BOP for short) is a base library creating a common interface for dealing with processors. Much like DBI, drivers are then created to handle the special magic and translation for each gateway.</p>
+<h4>Litle & Co.  (now Vantiv)</h4>
+<p><a href="https://github.com/Jayceh/Business--OnlinePayment--Litle">View Code</a>Plugin to interface with the Litle & Co. processor.  Has quite a few extra features for batch updater usage, chargeback API and more.</p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Non-Code Stuff</h3>
