--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
         <article class="markdown-body">
           <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Intro</h3>
+<a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>Intro</h3>
 
-<p>Content will go here</p>
+<p><a href="http://about.me/jayce.hall">About Me</a></p>
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Projects</h3>
@@ -57,11 +57,12 @@
 <p>Perl libraries for extremely fast JSON API's</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Business::OnlinePayment</h3>
+<a name="Litle" class="anchor" href="#litle"><span class="octicon octicon-link"></span></a>Business::OnlinePayment</h3>
 
 <p>Perl libraries for interacting with Payment Processors. Business::OnlinePayment (or BOP for short) is a base library creating a common interface for dealing with processors. Much like DBI, drivers are then created to handle the special magic and translation for each gateway.</p>
 <h4>Litle & Co.  (now Vantiv)</h4>
-<p><a href="https://github.com/Jayceh/Business--OnlinePayment--Litle">View Code</a>Plugin to interface with the Litle & Co. processor.  Has quite a few extra features for batch updater usage, chargeback API and more.</p>
+<p><a href="https://github.com/Jayceh/Business--OnlinePayment--Litle">View Code</a></p>
+<p>Plugin to interface with the Litle & Co. processor.  Has quite a few extra features for batch updater usage, chargeback API and more.</p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Non-Code Stuff</h3>
@@ -92,6 +93,5 @@ $ git checkout gh-pages
     <p class="name"></p>
   </div>
 
-  
 </body>
 </html>
